logo fixed on mobile view

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1001,8 +1001,8 @@ body {
 }
 .header .logo {
   position: relative;
-  margin-left: 2rem;
-  width: 180px;
+  margin-left: 1rem;
+  width: 200px !important;
   padding: 5px;
   margin-top: 5px;
 }
@@ -1017,7 +1017,7 @@ body {
   font-family: "Roboto", sans-serif;
   color: #eee;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   margin-left: 1rem;
 }
 @media screen and (min-width: 768px) {
@@ -1108,7 +1108,7 @@ body {
   cursor: pointer;
 }
 .header .left_nav .menu i {
-  font-size: 20px;
+  font-size: 18px;
   color: #eee;
 }
 @media screen and (min-width: 1000px) {
